leaflet with openstreetmap working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "editor.formatOnSave": false,
+    "[javascript]":{
+        "editor.formatOnSave": true
+    },
     "javascript.format.enable": false,
     "prettier.eslintIntegration": true
 }
