--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   "dependencies": {
     "axios": "^0.16.1",
     "electron-window-state": "^4.1.1",
+    "leaflet": "^1.2.0",
+    "leaflet.gridlayer.googlemutant": "^0.6.4",
     "ol": "^4.6.4",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
