--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.16.1",
     "electron-window-state": "^4.1.1",
     "leaflet": "^1.2.0",
+    "leaflet-draw": "^0.4.13",
     "leaflet.gridlayer.googlemutant": "^0.6.4",
     "ol": "^4.6.4",
     "vue": "^2.3.3",
