--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "editor.formatOnSave": false,
+    "[javascript]":
+    {"editor.formatOnSave": true},
     "javascript.format.enable": false,
     "prettier.eslintIntegration": true
 }
