--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.16.1",
     "electron-window-state": "^4.1.1",
     "ol": "^4.6.4",
+    "ol3-layerswitcher": "git+https://github.com/walkermatt/ol3-layerswitcher.git#ol",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
