--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "electron-window-state": "^4.1.1",
+    "mdi": "^2.1.19",
     "ol": "^4.6.4",
     "ol3-layerswitcher": "git+https://github.com/walkermatt/ol3-layerswitcher.git#ol",
     "vue": "^2.3.3",
