--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "npm run lint:fix"
+    "postinstall": "npm run lint:fix && electron-rebuild"
   },
   "build": {
     "productName": "treemapper",
@@ -58,6 +58,8 @@
     "mdi": "^2.1.19",
     "ol": "^4.6.4",
     "ol3-layerswitcher": "git+https://github.com/walkermatt/ol3-layerswitcher.git#ol",
+    "pouchdb": "^6.4.1",
+    "pouchdb-adapter-node-websql": "^6.4.1",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
@@ -84,6 +86,7 @@
     "electron-builder": "^19.19.1",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
+    "electron-rebuild": "^1.7.3",
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
