--- a/package.json
+++ b/package.json
@@ -55,11 +55,10 @@
   "dependencies": {
     "axios": "^0.16.1",
     "electron-window-state": "^4.1.1",
+    "localforage": "^1.5.6",
     "mdi": "^2.1.19",
     "ol": "^4.6.4",
     "ol3-layerswitcher": "git+https://github.com/walkermatt/ol3-layerswitcher.git#ol",
-    "pouchdb": "^6.4.1",
-    "pouchdb-adapter-node-websql": "^6.4.1",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
