--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-    "[javascript]":
-    {"editor.formatOnSave": true},
-    "javascript.format.enable": false,
-    "prettier.eslintIntegration": true
+  // "[javascript]":
+  "editor.formatOnSave": true,
+  "javascript.format.enable": false,
+  "prettier.eslintIntegration": true,
+  "prettier.singleQuote": true,
+  "prettier.trailingComma": "all",
 }
