--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
   "prettier.eslintIntegration": true,
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
-  "prettier.arrowParens": "always"
+  "prettier.arrowParens": "always",
+  "emmet.includeLanguages": {
+    "vue-html": "html",
+    "vue": "html"
+  }
 }
