--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "localforage": "^1.5.6",
     "mdi": "^2.1.19",
     "ol": "^4.6.4",
-    "ol3-layerswitcher": "git+https://github.com/walkermatt/ol3-layerswitcher.git#ol",
+    "ol-layerswitcher": "^2.0.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
